--- a/data/config.json
+++ b/data/config.json
@@ -53,7 +53,7 @@
                 "new_window": true
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Facebook",
                 "url": "#",
                 "style": "link",
                 "icon_class": "dev",
