--- a/data/config.json
+++ b/data/config.json
@@ -55,7 +55,7 @@
             {
                 "label": "Facebook",
                 "url": "#",
-                "style": "link",
+                "style": "icon",
                 "icon_class": "facebook",
                 "new_window": false,
                 "no_follow": false,
