--- a/data/config.json
+++ b/data/config.json
@@ -47,7 +47,7 @@
             },
             {
                 "label": "Facebook",
-                "url": "#",
+                "url": "https://www.facebook.com/PortnerAG/",
                 "style": "icon",
                 "icon_class": "facebook",
                 "new_window": false,
