--- a/data/config.json
+++ b/data/config.json
@@ -4,7 +4,7 @@
     "palette": "blue",
     "header": {
         "title": "Portner AG",
-        "tagline": "Header Tagline",
+        "tagline": "Freude am Fest!",
         "profile_img": "images/avatar.png",
         "profile_img_alt": "Author avatar",
         "background": "dark",
