--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Stackbit Fresh Theme",
     "layout_style": "overflow",
-    "palette": "blue",
+    "palette": "green",
     "header": {
         "title": "Portner AG",
         "tagline": "Freude am Fest!",
