config.json: updated title

--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Stackbit Fresh Theme",
+    "title": "Portner AG Getränke und Festservice",
     "layout_style": "overflow",
     "palette": "green",
     "header": {
