config.json: updated has_nav in header

--- a/data/config.json
+++ b/data/config.json
@@ -8,7 +8,7 @@
         "profile_img": "images/PORT_LOGO_GRUEN_Rand.webp",
         "profile_img_alt": "Author avatar",
         "background": "light",
-        "has_nav": false,
+        "has_nav": true,
         "nav_links": [
             {
                 "label": "Home",
