config.json: updated profile_img_alt in header

--- a/data/config.json
+++ b/data/config.json
@@ -6,7 +6,7 @@
         "title": "Portner AG",
         "tagline": "Freude am Fest!",
         "profile_img": "images/PORT_LOGO_GRUEN_Rand.webp",
-        "profile_img_alt": "Author avatar",
+        "profile_img_alt": "Portner AG Logo",
         "background": "light",
         "has_nav": true,
         "nav_links": [
