--- a/data/config.json
+++ b/data/config.json
@@ -26,7 +26,7 @@
                 "style": "link"
             },
             {
-                "label": "About",
+                "label": "Geschichte",
                 "url": "/about/",
                 "style": "link"
             },
