--- a/data/config.json
+++ b/data/config.json
@@ -16,13 +16,8 @@
                 "style": "link"
             },
             {
-                "label": "Blog",
+                "label": "Events",
                 "url": "/blog/",
-                "style": "link"
-            },
-            {
-                "label": "Style Guide",
-                "url": "/style-guide/",
                 "style": "link"
             },
             {
