--- a/data/config.json
+++ b/data/config.json
@@ -26,7 +26,7 @@
                 "style": "link"
             },
             {
-                "label": "Contact",
+                "label": "Kontakt",
                 "url": "/contact/",
                 "style": "link"
             }
