--- a/data/config.json
+++ b/data/config.json
@@ -35,7 +35,7 @@
         "social_links": [
             {
                 "label": "Instagram",
-                "url": "https://www.instagram.com/",
+                "url": "https://www.instagram.com/portnerag",
                 "style": "icon",
                 "icon_class": "instagram",
                 "new_window": true
